--- a/src/photos/full-size-photo.html
+++ b/src/photos/full-size-photo.html
@@ -2,9 +2,15 @@
     <div class="slide" click.trigger="mark_face($event)">
         <div class="slide" click="mark_face($event)" css="height: ${slide.height}px; width:${slide.width}px;">
             <img src="${baseURL}${slide.src}" height="${slide.height}" width="${slide.width}" />
-            <button dir="rtl" class="face" repeat.for="face of faces" click.trigger="handle_face(face, $event, $index)" style.bind="face_location(face)"
-                title.bind="face.name">
-                            </button>
+            <button dir="rtl" class="face" repeat.for="face of faces"
+                 click.trigger="handle_face(face, $event, $index)" 
+                 interact-draggable 
+                 interact-dragmove.delegate="dragmove(face, $event)" 
+                 interact-dragstart.delegate="dragstart(face, $event)" 
+                 interact-dragend.delegate="dragend(face, $event)"
+                 style.bind="face_location(face)"
+                 title.bind="face.name">
+            </button>
         </div>
     </div>
     <style>
