--- a/src/members/members.html
+++ b/src/members/members.html
@@ -1,19 +1,21 @@
 <template>
 
     <section class="container content-area">
-        <div class="row top-head" style="margin-top:50px">
-            <h1 dir="rtl"> ${"members.members" | t}</h1>
-
+        <div class="row top-head" style="margin-top:30px">
+            <div style="background-color:rgba(120, 120, 120, 0.3);height:75px;padding-top:5px;padding-right:15px;">
+                <h1 dir="rtl"> ${"members.members" | t}</h1>
+            </div>
             <div class="row" style="margin-bottom:20px">
                 <div class="col-md-1" if.bind="! user.editing"></div>
                 <div class="col-md-6"></div>
                 <div class="col-md-1" if.bind="user.editing">
                     <a route-href="route: member-details; params.bind: {id:'new'}" class="btn btn-success cl-create-btn">
-                    <i class="fa fa-plus-square-o"></i> ${'members.new' & t}
-                </a>
+                        <i class="fa fa-plus-square-o"></i>
+                        ${'members.new' & t}
+                    </a>
                 </div>
                 <div class="col-md-5">
-                    <div class="input-group" style="width:100%;">
+                    <div class="input-group" style="width:100%;margin-top:15px;">
                         <input dir="rtl" type="text" class="form-control" t="[placeholder]members.filter" style="font-size:18px;height:38px;" value.bind="filter & debounce">
                         <span class="input-group-btn" if.bind="filter">
                         <button class="btn btn-default cl-clear-filter-btn" type="button" click.delegate="filter = ''">
@@ -25,7 +27,7 @@
                 </div>
             </div>
 
-            <div class="member-list content-area" >
+            <div class="member-list content-area">
                 <ul class="list-group">
                     <li repeat.for="member of members | filter : filter : 24 :'full_name':'name'" class="list-group-item ${member.id === $parent.selectedId ? 'active' : ''}"
                         style="width:110px;float:right;min-height:166px;font-size:9px;vertical-align: text-bottom;background-color:rgba(0,0,0,0);">
