--- a/src/members/member-detail.html
+++ b/src/members/member-detail.html
@@ -1,11 +1,11 @@
 <template>
     <div style="margin-top:50px" class="content-area">
-        <div class="row" style="background-color:lightgrey;padding:10px;">
+        <div class="row" style="background-color:lightgrey;padding:10px;margin-bottom:15px;margin-right:0px;margin-left:0px;">
             <h3 dir="rtl" style="float: right;margin:0px;">
                 ${member.member_info.full_name & t}
             </h3>
         </div>
-        <div class="row slide-list">
+        <div class="row slide-list" style="margin-left:0px;margin-right:0px;">
             <div class="slide-control next" click.trigger="next_slide($event)"><i class="fa fa-chevron-right fa-3x"></i></div>
             <div class="slide-control prev" click.trigger="prev_slide($event)"><i class="fa fa-chevron-left fa-3x"></i></div>
             <a repeat.for="slide of member.slides" click.trigger="photo_clicked(slide)">
@@ -14,7 +14,7 @@
         </div>
         <div>
             <!-- if.bind="! user.editing"-->
-            <div class="row content-area" style="min-height:600px;" dir="rtl">
+            <div class="row content-area" style="min-height:560px;width:1170px;" dir="rtl">
                 <div class="col-md-6">
                     <div class="row" if.bind="member.family_connections.hasFamilyConnections">
                         <h3>${'members.family-connections' & t}</h3>
