--- a/src/user/user-mode.html
+++ b/src/user/user-mode.html
@@ -16,4 +16,9 @@
     <a if.bind="user.isLoggedIn && user.privileges.ADMIN" href click.trigger="manage_users()" t="[title]user.manage-users" class="border-right">
         <i class="fa fa-lg fa-cogs"></i>
     </a>
+
+    <a if.bind="user.isLoggedIn && user.privileges.PHOTO_UPLOADER" href click.trigger="upload_files()" t="[title]user.upload-files" class="border-right">
+        <i class="fa fa-lg fa-upload"></i>
+    </a>
+
 </template>
