--- a/src/members/member-edit.html
+++ b/src/members/member-edit.html
@@ -40,7 +40,8 @@
                             t="[title]members.cancel" >
                                 <i class="fa  fa-large fa-rotate-left"></i>
                             </button>
-                        <button if.bind="this.user.privileges.ADMIN" type="button" type="button" class="btn btn-warning ${dirty_story || dirty_info ? 'disabled' : btn-warning'}" click.trigger="try_delete()"
+                        <button if.bind="user.privileges.ADMIN" type="button" type="button" class="btn btn-warning ${dirty_story || dirty_info ? 'disabled' : btn-warning'}" 
+                            click.trigger="try_delete(member.member_info.id)"
                             t="[title]members.delete-member">
                                 <i class="fa fa-large fa-trash"></i>
                             </button>
