--- a/src/terms/terms.html
+++ b/src/terms/terms.html
@@ -1,4 +1,9 @@
 <template>
-    <br/><br/><br/><br/><br/>
-    <h1>Terms</h1>
+    <section class="container content-area">
+        <div class="row top-head" style="margin-top:30px">
+            <div style="background-color:rgba(120, 120, 120, 0.3);height:75px;padding-top:5px;padding-right:15px;">
+                <h1 dir="rtl"> ${"terms.terms-lexicon" | t}</h1>
+            </div>
+        </div>
+    </section>
 </template>
