--- a/src/photos/photos.html
+++ b/src/photos/photos.html
@@ -1,9 +1,47 @@
 <template>
     <section class="container content-area">
-        <div class="row top-head" style="margin-top:30px">
+        <div class="row" style="margin-top:30px">
             <div style="background-color:rgba(120, 120, 120, 0.3);height:75px;padding-top:5px;padding-right:15px;">
                 <h1 dir="rtl"> ${"photos.photos-store" | t}</h1>
             </div>
         </div>
+        <div class="row content-area" style="min-height:760px;width:100%;margin-top:20px;" dir="rtl">
+            <div class="row">
+                <div class="col-md-1">
+                    <input type="range" id="range" min="4" max="32" step="1" change.trigger="slider_changed()" value.bind="photos_per_line" />
+                </div>
+                <div class="col-md-9">
+                    <div class="row" style="margin-bottom:15px;">
+                        <div class="col-md-5 col-md-offset-7">
+                            <div class="input-group" style="width:100%;margin-top:15px;margin-right:-16px;">
+                                <input dir="rtl" type="text" class="form-control" t="[placeholder]photos.filter" style="font-size:18px;height:38px;" value.bind="filter & debounce"
+                                />
+                                <!--span class="input-group-btn" if.bind="filter">
+                            <button class="btn btn-default cl-clear-filter-btn" type="button" click.delegate="filter = ''">
+                                <i class="fa fa-times"></i>
+                                <span class="sr-only" t="members.clear"></span>
+                            </button>
+                            <!--/span-->
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row" id="photos-container" style="height:760px;overflow:auto;">
+                        <a repeat.for="photo of photo_list" click.trigger="photo_clicked(slide)">
+                            <img src="${photo.src}" width="${photo_size}" height="${photo_size}" style="margin:0;" />
+                        </a>
+                    </div>
+                </div>
+                <div class="col-md-2" style="font-size:28px;">
+                    ${'categories' | t}
+                </div>
+            </div>
+        </div>
     </section>
+    <style>
+        #range {
+            -webkit-appearance: slider-vertical;
+            width: 20px;
+            height: 256px;
+        }
+    </style>
 </template>
