--- a/src/photos/photos.html
+++ b/src/photos/photos.html
@@ -25,8 +25,8 @@
                             </div>
                         </div>
                     </div>
-                    <div class="row" id="photos-container" style="height:760px;overflow:auto;">
-                        <a repeat.for="photo of photo_list" click.trigger="photo_clicked(slide)">
+                    <div class="row" id="photos-container" style="height:660px;overflow:auto;">
+                        <a repeat.for="photo of photo_list" click.trigger="photo_clicked(photo)" title.bind="photo.keywords">
                             <img src="${photo.src}" width="${photo_size}" height="${photo_size}" style="margin:0;" />
                         </a>
                     </div>
@@ -41,7 +41,7 @@
         #range {
             -webkit-appearance: slider-vertical;
             width: 20px;
-            height: 256px;
+            height: 128px;
         }
     </style>
 </template>
