--- a/src/photos/photos.html
+++ b/src/photos/photos.html
@@ -33,6 +33,7 @@
                 </div>
                 <div class="col-md-2" style="font-size:28px;">
                     ${'categories' | t}
+                    <compose view-model="multi-select" model="{params: params, action: update_list}"></compose>
                 </div>
             </div>
         </div>
