--- a/src/photos/photos.html
+++ b/src/photos/photos.html
@@ -26,14 +26,14 @@
                         </div>
                     </div>
                     <div class="row" id="photos-container" style="height:660px;overflow:auto;">
-                        <a repeat.for="photo of photo_list" click.trigger="photo_clicked(photo)" title.bind="photo.keywords">
-                            <img src="${photo.src}" width="${photo_size}" height="${photo_size}" style="margin:0;" />
+                        <a repeat.for="photo of photo_list" click.trigger="photo_clicked(photo)" title.bind="photo.keywords" >
+                            <img src="${photo.square_src}" width="${photo_size}" height="${photo_size}" style="margin:0;" />
                         </a>
                     </div>
                 </div>
                 <div class="col-md-2" style="font-size:28px;">
-                    ${'categories' | t}
-                    <compose view-model="multi-select" model="{params: params, action: update_list}"></compose>
+                    ${'topics' | t}
+                    <!--compose view-model="multi-select" model="{params: params, action: update_photo_list}"></compose-->
                 </div>
             </div>
         </div>
