--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 
 <head>
   <meta charset="utf-8">
+  <meta http-equiv="expires" content="0">
   <title>Aurelia</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script src="https://use.fontawesome.com/44d9dd0a37.js"></script>
-  <link href="styles/froala-editor/css/froala_editor.pkgd.min.css" rel="stylesheet" type="text/css" />
-  <link href="styles/froala-editor/css/froala_style.min.css" rel="stylesheet" type="text/css" />
+  <link href="nodemodules/froala-editor/css/froala_editor.pkgd.min.css" rel="stylesheet" type="text/css" />
+  <link href="nodemodules/froala-editor/css/froala_style.min.css" rel="stylesheet" type="text/css" />
   <script id="fr-fek">try{(function (k){localStorage.FEK=k;t=document.getElementById('fr-fek');t.parentNode.removeChild(t);})('QwsagB-22gE-13rkG2uiB-22==')}catch(e){}</script>
 </head>
 
