--- a/src/photos/photos.html
+++ b/src/photos/photos.html
@@ -28,6 +28,7 @@
                     ${'topics' | t}
                     <!--compose view-model="multi-select" model="{params: params, action: update_photo_list}"></compose-->
                     <!--compose view-model="multi-selection" model.bind="params"></compose-->
+                    <!--multi-select options="topic_list"></multi-select-->
                 </div>
             </div>
         </div>
