--- a/src/members/member-detail.html
+++ b/src/members/member-detail.html
@@ -1,12 +1,14 @@
 <template>
     <div style="margin-top:50px" class="content-area">
-        <div class="row" style="background-color:lightgrey;padding:10px;margin-bottom:15px;margin-right:0px;margin-left:0px;">
-            <h3 dir="rtl" style="float: right;margin:0px;">
-                ${member.member_info.full_name & t}
-                <span if.bind="user.privileges.DEVELOPER">${member.member_info.id}</span>
+        <div class="row" style="background-color:lightgrey;padding:10px;margin-bottom:15px;margin-right:0px;margin-left:0px;" <h3
+            dir="rtl" style="float: right;margin:0px;">
+            ${member.member_info.full_name & t}
+            <span if.bind="user.privileges.DEVELOPER">${member.member_info.id}</span>
             </h3>
         </div>
-        <div class="row slide-list" style="margin-left:0px;margin-right:0px;">
+        <div class="row slide-list" style="margin-left:0px;margin-right:0px;" interact-draggable interact-dragmove.delegate="dragmove($event)"
+            interact-dragstart.delegate="dragstart($event)" interact-dragend.delegate="dragend($event)">
+
             <div class="slide-control next" click.trigger="next_slide($event)"><i class="fa fa-chevron-right fa-3x"></i></div>
             <div class="slide-control prev" click.trigger="prev_slide($event)"><i class="fa fa-chevron-left fa-3x"></i></div>
             <a repeat.for="slide of member.slides" click.trigger="photo_clicked(slide)">
