--- a/src/resources/elements/multi-select.html
+++ b/src/resources/elements/multi-select.html
@@ -5,13 +5,18 @@
     </div>
     <div class="row" style="max-height:300px;">
         <ul class="list-group" style="list-style-type:none">
-            <li repeat.for="option of selected_options" class="selected" if.bind="is_selected(option)" >
+            <li repeat.for="option of selected_options" class="selected"> <!-- if.bind="is_selected(option)" -->
+                <a click.trigger="toggle_selection(option)">${option.name} </a>
+            </li>
+        </ul>
+        <ul class="list-group" style="list-style-type:none" if.bind="true || unselected_options===[]">
+            <li repeat.for="option of options | filter: filter : 9999 : 'name'" if.bind="! is_selected(option)">
                 <a click.trigger="toggle_selection(option)">${option.name} </a>
             </li>
         </ul>
         <ul class="list-group" style="list-style-type:none">
-            <li repeat.for="option of options | filter: filter : 9999 : 'name'" if.bind="! is_selected(option)">
-                <a click.trigger="toggle_selection(option)">${option.name} </a>
+            <li repeat.for="option of unselected_options | filter: filter : 9999 : 'name'" if.bind="! is_selected(option)">
+                <a click.trigger="toggle_selection(option)" style="background:yellow;" >${option.name} </a>
             </li>
         </ul>
     </div>
