--- a/src/photos/photos.html
+++ b/src/photos/photos.html
@@ -29,7 +29,7 @@
                     <div class="row" style="font-size:28px;">
                         ${'topics' | t}
                     </div>
-                    <div class="row" style="max-height: 300px;overflow:auto;">
+                    <div class="row" >
                         <multi-select options.bind="topic_list" change.delegate="handle_change($event)" ></multi-select>
                     </div>
                 </div>
