--- a/src/resources/elements/multi-select.html
+++ b/src/resources/elements/multi-select.html
@@ -1,16 +1,16 @@
 <template>
     <div class="input-group" style="width:100%;margin-top:15px;">
-        <input dir="rtl" type="text" class="form-control" t="[placeholder]multi-selection.filter" style="font-size:12px;height:38px;"
+        <input dir="rtl" type="search" class="form-control" t="[placeholder]multi-selection.filter" style="font-size:12px;height:28px;width:90%;float:right"
             value.bind="filter & debounce">
     </div>
-    <div class="row" style="max-height: 100px;overflow:auto;">
+    <div class="row" style="max-height: 100px;overflow:auto;margin-left:18px;margin-right:-36px;">
         <ul class="list-group" style="list-style-type:none">
             <li repeat.for="option of selected_options" class="selected"> <!-- if.bind="is_selected(option)" -->
                 <a click.trigger="toggle_selection(option)">${option.name} </a>
             </li>
         </ul>
     </div>
-    <div class="row" style="max-height: 200px;overflow:auto;">
+    <div class="row" style="max-height: 150px;overflow:auto;margin-left:18px;margin-right:-36px;">
         <ul class="list-group" style="list-style-type:none" if.bind="true || unselected_options===[]">
             <li repeat.for="option of options | filter: filter : 9999 : 'name'" if.bind="! is_selected(option)">
                 <a click.trigger="toggle_selection(option)">${option.name} </a>
