--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="expires" content="0">
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+
   <title>Aurelia</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script src="https://use.fontawesome.com/44d9dd0a37.js"></script>
