--- a/src/photos/photos.html
+++ b/src/photos/photos.html
@@ -32,13 +32,13 @@
                     <div class="row">
                         <multi-select options.bind="topic_list" place_holder_text="photos.click-topic" change.delegate="handle_topic_change($event) "></multi-select>
                     </div>
-                    <div class="row " style="font-size:28px; ">
+                    <!--div class="row " style="font-size:28px; ">
                         ${'photos.photographers' | t}
                     </div>
                     <div class="row ">
                         <multi-select options.bind="photographer_list" place_holder_text="photos.click-photographer"
                             change.delegate="handle_photographer_change($event)"></multi-select>
-                    </div>
+                    </div-->
                     <div class="row" style="width:90%;margin-top: 20px;">
                         <form role="form">
                             <select value.bind="params.selected_days_since_upload" style="height:32px;" change.delegate="handle_change($event)">
@@ -57,11 +57,11 @@
                         <form class="form-horizontal" submit.delegate="handle_from_date($event)">
                             <div class="form-group">
                                 <div class="col-sm-5">
-                                    <input type="text" id="from-date" value.bind="params.from_date"style="width:72px" change.delegate="handle_change($event)" >
+                                    <input type="text" id="from-date" value.bind="params.from_date & debounce" style="width:106px;margin-right:-32px;padding-right:6px;" t="[placeholder]photos.enter-date" change.delegate="handle_change($event)" >
                                 </div>
                                 <label class="col-sm-7 control-label" for="params.from-date & debounce">${'photos.from-date' & t}</label>
                                 <div class="col-sm-5">
-                                    <input type="text" id="to-date" value.bind="params.to_date & debounce" style="width:72px;" change.delegate="handle_change($event)" >
+                                    <input type="text" id="to-date" value.bind="params.to_date & debounce" style="width:106px;margin-right:-32px;padding-right:6px;" t="[placeholder]photos.enter-date" change.delegate="handle_change($event)" >
                                 </div>
                                 <label class="col-sm-7 control-label" for="to-date">${'photos.to-date' & t}</label>
                             </div>
