--- a/src/photos/upload-photos.html
+++ b/src/photos/upload-photos.html
@@ -22,7 +22,7 @@
                             </div>
                         </form>
                     </section>
-                    <h2 if.bind="upload_finished">${"number_uploaded"} photos uploaded. ${"number_duplicates"} were already loaded.</h2>
+                    <h2 if.bind="upload_finished"">"${number_uploaded} photos uploaded. ${number_duplicates} were already loaded."</h2>
                 </div>
             </div>
         </div>
