--- a/src/photos/upload-photos.html
+++ b/src/photos/upload-photos.html
@@ -1,28 +1,38 @@
 <template>
-    <div class="row centered-form">
-        <div class="col-md-10 col-md-offset-1">
+    <div class="row centered-form" style="width:720px;min-height:560px;"dir="ltr">
+        <div class="col-md-10 col-md-offset-2">
             <div class="panel panel-default">
                 <div class="panel-heading">
-                    <h3 class="panel-title text-center">${"user.upload-files" & t}</h3>
+                    <h3 class="panel-title text-center">${"photos.upload-files" & t}</h3>
                 </div>
                 <div class="panel-body">
                     <section class="container">
 
                         <form class="form-horizontal" submit.delegate="save()">
                             <div class="form-group">
-                                <label class="col-sm-3 control-label" for="photos">Photos</label>
-                                <div class="col-sm-9">
-                                    <input type="file" multiple id="photos" accept="image/*" files.bind="photos">
+                                <label style="margin-left:191px;width:150px;background-color:lightgray;border:solid 1px darkgray;border-radius:5px;text-align:center;padding:6px;"
+                                    class="control-label" for="photos">
+                                    ${'photos.select-photos' | t}
+                                    </label>
+                                <div>
+                                    <input style="display:none" type="file" multiple id="photos" accept="image/*" files.bind="photos">
                                 </div>
                             </div>
-                            <div class="form-group">
-                                <div class="col-sm-9 col-sm-offset-3">
-                                    <button type="submit" class="btn btn-success">Save</button>
+                            <div class="form-group" if.bind="photos && photos.length > 0">
+                                <h4 style="margin-left:191px;width:150px;text-align:center"> ${photos.length} ${'photos.photos-were-selected' | t}</h4>
+                                <div style="padding-left:191px">
+                                    <button style="margin-left:auto; margin-right:auto;width:150px;" type="submit" class="btn btn-success">${'photos.save' | t}</button>
                                 </div>
                             </div>
                         </form>
                     </section>
-                    <h2 if.bind="upload_finished"">"${number_uploaded} photos uploaded. ${number_duplicates} were already loaded."</h2>
+                    <div if.bind="working">
+                        <h3 style="margin-left:140px;width:250px;">${'photos.upload-in-progress' | t}</h3>
+                    </div>
+                    <div if.bind="upload_finished" style="margin-left:130px;width:350px;">
+                        <h3 style="color:green;">${number_uploaded} ${'photos.photos-uploaded' | t}</h3>
+                        <h3 if.bind="number_duplicates>0">${number_duplicates} ${'photos.photos-duplicate' | t} </h3>
+                    </div>
                 </div>
             </div>
         </div>
