--- a/src/photos/upload-photos.html
+++ b/src/photos/upload-photos.html
@@ -3,8 +3,14 @@
         <div class="col-md-10 col-md-offset-2">
             <div class="panel panel-default">
                 <div class="panel-heading">
-                    <h3 class="panel-title text-center">${"photos.upload-files" & t}</h3>
+                    <h1 class="panel-title text-center"<strong>${"photos.upload-files" & t}</strong></h1>
                 </div>
+                <div>
+                    <p style="align-content: right;padding:20px;font-size:120%;" dir="rtl">
+                        ${'photos.sharing' | t}
+                        <strong>photos@gbstories.org<strong>
+                        </p>
+                    </div>
                 <div class="panel-body">
                     <section class="container">
 
